modified:   docker-compose.yml 	new file:   russell_2000.py 	modified:   yfinance_app.py

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,10 @@ services:
     volumes:
       - .:/app
     command: python yfinance_app.py
+    deploy:
+      resources:
+        limits:
+          memory: 30G  # Increased memory limit to 30 Gigabytes
 
   one_stock:
     build:
